--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.5",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -30,10 +32,11 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.66.5",
     "cache-manager": "^7.2.8",
-    "cache-manager-ioredis": "^2.1.0",
     "dotenv": "^17.2.3",
     "ioredis": "^5.9.2",
+    "keyv": "^5.5.5",
     "mongoose": "^9.1.4",
     "mysql2": "^3.16.1",
     "passport": "^0.7.0",
